DevTools: NetworkPanel: Show bar that covers time between issue and start.
BUG=471507

Review URL: https://codereview.chromium.org/1043893002

git-svn-id: svn://svn.chromium.org/blink/trunk@195433 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/network/networkLogView.css
+++ b/front_end/network/networkLogView.css
@@ -369,6 +369,7 @@
 
 /* Resource categories */
 
+.network-graph-bar.request-timing.queueing,
 .network-graph-bar.request-timing.total,
 .network-graph-bar.request-timing.proxy,
 .network-graph-bar.request-timing.dns,
@@ -378,6 +379,7 @@
     margin: 3px 0;
 }
 
+.network-graph-bar.request-timing.queueing,
 .network-graph-bar.request-timing.total {
     border: solid 1px #AAAAAA;
 }
